--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "webrtc_test",
   "version": "1.0.0",
   "description": "Testing framework for webRTC connection offers",
-  "main": "start.js",
+  "main": "server.js",
   "scripts": {
     "test": "-t",
     "start": "node server.js"
@@ -22,5 +22,9 @@
   "bugs": {
     "url": "https://github.com/Robiq/webRTC_test/issues"
   },
-  "homepage": "https://github.com/Robiq/webRTC_test#readme"
+  "homepage": "https://github.com/Robiq/webRTC_test#readme",
+  "dependencies": {
+    "wrtc": "file:node_modules/wrtc",
+    "ws": "^3.3.2"
+  }
 }
