--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "webrtc_test",
   "version": "1.0.0",
   "description": "Testing framework for webRTC connection offers",
-  "main": "server.js",
+  "main": "server_client_delay.js",
   "scripts": {
     "test": "-t",
-    "start": "node server.js"
+    "start": "node server_client_delay.js",
+    "delay client": "node server_delay.js",
+    "delay both": "node server_both.js",
   },
   "repository": {
     "type": "git",
