--- a/package.json
+++ b/package.json
@@ -2,11 +2,9 @@
   "name": "webrtc_test",
   "version": "1.0.0",
   "description": "Testing framework for webRTC connection offers",
-  "main": "server_delay.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node server_delay.js",
-    "delay client": "node server_client_delay.js",
-    "delay both": "node server_both.js",
+    "start": "node server.js",
     "clean": "cd ./Logs && rm * && cd .."
   },
   "repository": {
